--- a/css/grayscaleCustom.css
+++ b/css/grayscaleCustom.css
@@ -10,6 +10,7 @@ body {
     font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
     color: black;
     background-color: white;
+    text-align: center;
 }
 
 html {
@@ -36,8 +37,10 @@ h2 {
 
 p {
     margin: 0 0 25px;
+    width: 650px; 
     font-size: 16px;
     line-height: 1.5;
+    text-align: center;
 }
 
 @media(min-width:768px) {
@@ -50,6 +53,7 @@ p {
 
 a {
     color: #007A29;
+
     -webkit-transition: all .2s ease-in-out;
     -moz-transition: all .2s ease-in-out;
     transition: all .2s ease-in-out;
@@ -256,7 +260,7 @@ a:focus {
 
 @media(min-width:767px) {
     .content-section {
-        padding-top: 175px;
+        padding-top: 100px;
     }
 
     .download-section {
