--- a/css/grayscaleCustom.css
+++ b/css/grayscaleCustom.css
@@ -51,7 +51,7 @@ p {
 }
 
 a {
-    color: #007A29;
+    color: #2B565C;
 
     -webkit-transition: all .2s ease-in-out;
     -moz-transition: all .2s ease-in-out;
@@ -61,7 +61,7 @@ a {
 a:hover,
 a:focus {
     text-decoration: none;
-    color: #23527c;
+    color: #2A5E5C;
 }
 
 .light {
@@ -147,50 +147,83 @@ a:focus {
     }
 }
 
-.intro {
-    display: table;
-    width: 100%;
-    height: auto;
-    padding: 100px 0;
-    text-align: center;
-    color: #fff;
-    background: url(../img/GreatLawn.jpg) no-repeat center scroll;
-    background-color: #000;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
+.intro-header {
+  background-color: #808080;
+  background: no-repeat center center;
+  background-attachment: scroll;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+  margin-bottom: 50px;
 }
-
-.intro .intro-body {
-    display: table-cell;
-    vertical-align: middle;
+.intro-header .site-heading,
+.intro-header .post-heading,
+.intro-header .page-heading {
+  padding: 100px 0 50px;
+  color: white;
 }
-
-.intro .intro-body .brand-heading {
-    font-size: 40px;
-    margin-top: 100px;
-    margin-bottom: 225px;
+@media only screen and (min-width: 768px) {
+  .intro-header .site-heading,
+  .intro-header .post-heading,
+  .intro-header .page-heading {
+    padding: 150px 0;
+  }
 }
-
-.intro .intro-body .intro-text {
-    font-size: 18px;
+.intro-header .site-heading,
+.intro-header .page-heading {
+  text-align: center;
 }
-
-@media(min-width:768px) {
-    .intro {
-        height: 100%;
-        padding: 0;
-    }
-
-    .intro .intro-body .brand-heading {
-        font-size: 80px;
-    }
-
-    .intro .intro-body .intro-text {
-        text-align: center;
-        font-size: 26px;
-    }
+.intro-header .site-heading h1,
+.intro-header .page-heading h1 {
+  margin-top: 0;
+  font-size: 50px;
+}
+.intro-header .site-heading .subheading,
+.intro-header .page-heading .subheading {
+  font-size: 24px;
+  line-height: 1.1;
+  display: block;
+  font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-weight: 300;
+  margin: 10px 0 0;
+}
+@media only screen and (min-width: 768px) {
+  .intro-header .site-heading h1,
+  .intro-header .page-heading h1 {
+    font-size: 80px;
+  }
+}
+.intro-header .post-heading h1 {
+  font-size: 35px;
+}
+.intro-header .post-heading .subheading,
+.intro-header .post-heading .meta {
+  line-height: 1.1;
+  display: block;
+}
+.intro-header .post-heading .subheading {
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 24px;
+  margin: 10px 0 30px;
+  font-weight: 600;
+}
+.intro-header .post-heading .meta {
+  font-family: 'Lora', 'Times New Roman', serif;
+  font-style: italic;
+  font-weight: 300;
+  font-size: 20px;
+}
+.intro-header .post-heading .meta a {
+  color: white;
+}
+@media only screen and (min-width: 768px) {
+  .intro-header .post-heading h1 {
+    font-size: 55px;
+  }
+  .intro-header .post-heading .subheading {
+    font-size: 30px;
+  }
 }
 
 .btn-circle {
@@ -284,17 +317,17 @@ a:focus {
 }
 
 .btn-default {
-    border: 1px solid #007A29;
-    color: #007A29
+    border: 1px solid #2A5E5C;
+    color: #2A5E5C;
     background-color: transparent;
 }
 
 .btn-default:hover,
 .btn-default:focus {
-    border: 1px solid #007A29;
+    border: 1px solid #2A5E5C;
     outline: 0;
     color: #fff;
-    background-color: #007A29;
+    background-color: #2A5E5C;
 }
 
 ul.banner-social-buttons {
@@ -331,13 +364,16 @@ footer p {
 hr {
     border: 0;
     height: 1px;
-    background: #333;
-    background-image: -webkit-linear-gradient(left, #ccc, #333, #ccc);
+    background: #000;
+    /*background-image: -webkit-linear-gradient(left, #ccc, #333, #ccc);
     background-image:    -moz-linear-gradient(left, #ccc, #333, #ccc);
     background-image:     -ms-linear-gradient(left, #ccc, #333, #ccc);
-    background-image:      -o-linear-gradient(left, #ccc, #333, #ccc);
+    background-image:      -o-linear-gradient(left, #ccc, #333, #ccc);*/
 }
 
+.page-heading hr {
+    background: #fff;
+}
 
 .pcenter {
     text-align: center;
